kubernetes/apps/base/homepage/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homepage
  namespace: homepage
spec:
  replicas: 1
  selector:
    matchLabels:
      app: homepage
  template:
    metadata:
      labels:
        app: homepage
    spec:
      securityContext:
        fsGroup: 2008
      containers:
        - name: homepage
          image: ghcr.io/gethomepage/homepage:v1
          ports:
            - containerPort: 3000
          securityContext:
            runAsUser: 2008
            runAsGroup: 2008
            allowPrivilegeEscalation: false
          resources:
            limits:
              cpu: 500m
              memory: 512Mi
            requests:
              cpu: 100m
              memory: 128Mi
          volumeMounts:
            - name: config
              mountPath: /app/config/custom.css
              subPath: custom.css
              readOnly: true
            - name: config
              mountPath: /app/config/custom.js
              subPath: custom.js
              readOnly: true
            - name: config
              mountPath: /app/config/settings.yaml
              subPath: settings.yaml
              readOnly: true
            - name: config
              mountPath: /app/config/services.yaml
              subPath: services.yaml
              readOnly: true
            - name: config
              mountPath: /app/config/bookmarks.yaml
              subPath: bookmarks.yaml
              readOnly: true
            - name: config
              mountPath: /app/config/widgets.yaml
              subPath: widgets.yaml
              readOnly: true
            - name: config
              mountPath: /app/config/kubernetes.yaml
              subPath: kubernetes.yaml
              readOnly: true
            - name: config
              mountPath: /app/config/docker.yaml
              subPath: docker.yaml
              readOnly: true
            - name: config
              mountPath: /app/config/proxmox.yaml
              subPath: proxmox.yaml
              readOnly: true
            - name: logs
              mountPath: /app/config/logs
      volumes:
        - name: config
          configMap:
            name: homepage-config
        - name: logs
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: homepage
  namespace: homepage
spec:
  selector:
    app: homepage
  ports:
    - port: 80
      targetPort: 3000
